mod. wave funcs again

--- a/wave_calcs.ipynb
+++ b/wave_calcs.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,29 +34,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Deepwater wavelength Lo: 56.2 m; celerity 9.4 m/s (21.0 mph)\n",
-      "Wavelength in 10.0 m:  45.8 m; celerity 7.6 m/s (17.1 mph)\n",
-      "Iribarren number: 0.53 plunging\n",
-      "kh: 1.298, k: 0.130\n"
+      "Deepwater wave height Ho: 2.1 m\n",
+      "Deepwater wavelength Lo: 99.9 m; celerity 12.5 m/s (27.9 mph)\n",
+      "Wavelength in 26.0 m:  99.9 m; celerity 12.5 m/s (27.9 mph)\n",
+      "Iribarren number: 0.51 plunging\n",
+      "kh: 1.739, k: 0.067\n"
      ]
     }
    ],
    "source": [
     "# User input\n",
-    "H = .5\n",
-    "T = 6.\n",
-    "h = 10.\n",
-    "B = .05 # beach slope as fraction (rise/run)\n",
+    "H = 2\n",
+    "T = 8.\n",
+    "h = 26.\n",
+    "B = 1.5/20. # beach slope as fraction (rise/run)\n",
     "\n",
     "# End user input\n",
     "\n",
+    "# Deepwater wave height from reverse shoaling\n",
+    "Ho = reverse_shoal(H,T,h)\n",
+    "print(\"Deepwater wave height Ho: {:.1f} m\".format(Ho))\n",
     "# Deepwater wavelength and celerity\n",
     "g = 9.81\n",
     "Lo = (g*T**2)/(2*np.pi)\n",
@@ -66,7 +70,7 @@
     "print(\"Wavelength in {:.1f} m:  {:.1f} m; celerity {:.1f} m/s ({:.1f} mph)\".format(h, L, L/T, 2.237*L/T))\n",
     "\n",
     "# Iribarren number\n",
-    "I,descr = iribarren(B,H,T,\"deepwater\")\n",
+    "I,descr = iribarren(B,Ho,T,\"deepwater\")\n",
     "print(\"Iribarren number: {:.2f} {}\".format(I,descr))\n",
     "\n",
     "# Wavenumber\n",
@@ -77,10 +81,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 72,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.00846875"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "27.1/3200"
+   ]
   }
  ],
  "metadata": {
