mod. wave funcs again

--- a/wave_calcs.ipynb
+++ b/wave_calcs.ipynb
@@ -34,25 +34,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Deepwater wave height Ho: 2.1 m\n",
-      "Deepwater wavelength Lo: 99.9 m; celerity 12.5 m/s (27.9 mph)\n",
-      "Wavelength in 26.0 m:  99.9 m; celerity 12.5 m/s (27.9 mph)\n",
-      "Iribarren number: 0.51 plunging\n",
-      "kh: 1.739, k: 0.067\n"
+      "Deepwater wave height Ho: 2.0 m\n",
+      "Deepwater wavelength Lo: 6.2 m; celerity 3.1 m/s (7.0 mph)\n",
+      "Wavelength in 26.0 m:  3.1 m; celerity 1.5 m/s (3.5 mph)\n",
+      "Iribarren number: 0.13 spilling\n",
+      "kh: 26.158, k: 1.006\n"
      ]
     }
    ],
    "source": [
     "# User input\n",
     "H = 2\n",
-    "T = 8.\n",
+    "T = 2.\n",
     "h = 26.\n",
     "B = 1.5/20. # beach slope as fraction (rise/run)\n",
     "\n",
